<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>RESOLVE</artifactId>
    <groupId>edu.clemson.rsrg</groupId>
    <version>Summer24a</version>
    <packaging>jar</packaging>

    <name>RESOLVE</name>
    <description>The RESOLVE Verifying Compiler.</description>
    <inceptionYear>2002</inceptionYear>
    <organization>
        <name>RESOLVE Software Research Group (RSRG)</name>
        <url>https://www.cs.clemson.edu/resolve/</url>
    </organization>

    <developers>
        <developer>
            <name>Murali Sitaraman</name>
            <email>murali@clemson.edu</email>
            <roles>
                <role>Project Lead - RESOLVE</role>
            </roles>
        </developer>
        <developer>
            <name>Yu-Shan Sun</name>
            <email>yushans@g.clemson.edu</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Dan Welch</name>
            <email>dtw.welch@gmail.com</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Nicodemus Mbwambo</name>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>RESOLVE Custom License Header</name>
            <url>${license.url}</url>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <!-- License related information -->
        <license.url>src/resources/LICENSE-Header.txt</license.url>
    </properties>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/ClemsonRSRG/RESOLVE/issues</url>
    </issueManagement>

    <scm>
        <url>https://github.com/ClemsonRSRG/RESOLVE</url>
        <connection>scm:git:git://github.com/ClemsonRSRG/RESOLVE.git</connection>
        <developerConnection>scm:git:[fetch=]git://github.com/ClemsonRSRG/RESOLVE.git[push=]https://github.com/ClemsonRSRG/RESOLVE.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>ST4</artifactId>
            <version>4.3.4</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-io</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-ext</artifactId>
            <version>1.5.2</version>
        </dependency>
        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.10.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- JUnit 5 Engine to run the tests -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <!-- Optional: Assertions and other utilities -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.14.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>-Xmx2G</argLine>
                    <excludes>
                        <exclude>**/CCReg*Theorem*.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <!-- Plugin for ANTLR 4 grammar. -->
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.13.2</version>
                <configuration>
                    <sourceDirectory>src/antlr4</sourceDirectory>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Plugin to add the license information. -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>5.0.0</version>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <header>${license.url}</header>
                            <excludes>
                                <exclude>.dir-locals.el</exclude>
                                <exclude>.gitattributes</exclude>
                                <exclude>.gitignore</exclude>
                                <exclude>*.md</exclude>
                                <exclude>*.xml</exclude>
                                <exclude>*.yml</exclude>
                                <exclude>LICENSE.txt</exclude>
                                <exclude>.github/**</exclude>
                                <exclude>bin/**</exclude>
                                <exclude>docs/**</exclude>
                                <exclude>src/antlr4/**</exclude>
                                <exclude>src/resources/**</exclude>
                                <exclude>test/resources/**</exclude>
                                <exclude>RESOLVE-Workspace/**</exclude>
                                <exclude>RESOLVE-Workspace/Main/Concepts/**/**</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                    <mapping>
                        <java>SLASHSTAR_STYLE</java>
                    </mapping>
                    <properties>
                        <year>2024</year>
                    </properties>
                </configuration>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Plugin to format the Java code. -->
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.29.0</version>
                <configuration>
                    <directories>
                        <directory>${project.build.sourceDirectory}</directory>
                        <directory>${project.build.testSourceDirectory}</directory>
                    </directories>
                    <lineEnding>LF</lineEnding>
                    <encoding>UTF-8</encoding>
                    <lineLength>200</lineLength>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Plugin to build a RESOLVE jar with dependencies. -->
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>edu.clemson.rsrg.Main</mainClass>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!-- bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <!-- Directory for source files -->
        <sourceDirectory>src/java</sourceDirectory>

        <!-- Resources directory for source files -->
        <resources>
            <resource>
                <directory>src/resources</directory>
            </resource>
        </resources>

        <!-- Directory for test files -->
        <testSourceDirectory>test/java</testSourceDirectory>

        <!-- Resources directory for test files -->
        <testResources>
            <testResource>
                <directory>test/resources</directory>
            </testResource>
        </testResources>
    </build>

    <!-- This doesn't work. Needs to be fixed.
    <reporting>
        <plugins>
            <!- Plugin to generate Javadoc. -
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.4</version>
                <configuration>
                    <outputDirectory>${project.basedir}/docs/javadoc</outputDirectory>
                    <excludePackageNames>edu.clemson.cs.r2jt</excludePackageNames>
                    <doctitle>API for ${project.name} ${project.version}</doctitle>
                    <windowtitle>${project.name}</windowtitle>
                </configuration>
            </plugin>
        </plugins>
    </reporting> -->

</project>
